[package]
name = "aizu-rust"
version = "0.1.0"
authors = ["munenaga <munenaga@mm0205.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="aizu-rust"
path="src/main.rs"

[lib]
name="aizu_rust_lib"
path="src/lib.rs"

[dependencies]
